--- a/core/res/res/values-vi/lotus_strings.xml
+++ b/core/res/res/values-vi/lotus_strings.xml
@@ -4,6 +4,13 @@
     <!-- Buttons - Enable navbar (used by Settings and device parts app) -->
     <string name="disable_navkeys_title">Bật thanh điều hướng trên màn hình</string>
     <string name="disable_navkeys_summary">Bật thanh điều hướng trên màn hình và tắt các phím cứng</string>
+	
+	<!-- MicroG -->
+    <string name="permlab_fakePackageSignature">Chữ ký gói giả mạo</string>
+
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">Cho phép ứng dụng giả vờ là một ứng dụng khác. Các ứng dụng độc hại có thể có thể sử dụng điều này để truy cập dữ liệu ứng dụng riêng. Sử dụng hợp pháp bao gồm một trình giả lập giả vờ là những gì nó giả lập. Cấp quyền này chỉ với sự thận trọng!</string>
+
     <!-- Ambient play -->
     <string name="ambient_recognition_notification">Đang phát</string>
     <string name="ambient_recognition_information">%1$s bởi %2$s</string>
