--- a/packages/SystemUI/res-keyguard/layout/keyguard_status_view.xml
+++ b/packages/SystemUI/res-keyguard/layout/keyguard_status_view.xml
@@ -83,6 +83,18 @@
                 app:custom_hand_hour="@drawable/custom_clock_hand_hour"
                 app:custom_hand_minute="@drawable/custom_clock_hand_minute"
                 app:custom_clock_dial_ambient="@drawable/custom_clock_dial_ambient"/>
+			<com.android.keyguard.clocks.CustomAnalogClock
+                android:id="@+id/spidey_clock_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+				android:layout_marginTop="@dimen/custom_clock_top_margin"
+                app:custom_dial="@drawable/spidey_clock_dial"
+                app:custom_hand_hour="@drawable/spidey_clock_hand_hour"
+                app:custom_hand_minute="@drawable/spidey_clock_hand_minute"
+                app:custom_clock_dial_ambient="@drawable/spidey_clock_dial_ambient"/>
             <View
                 android:id="@+id/clock_separator"
                 android:layout_width="@dimen/widget_separator_width"
