--- a/core/res/res/values/lotus_config.xml
+++ b/core/res/res/values/lotus_config.xml
@@ -306,4 +306,7 @@
     <string name="config_SmartChargingSupspendValue" translatable="false">0</string>
     <string name="config_SmartChargingResumeValue" translatable="false">1</string>
 
+    <!-- Whether to enable oneplus cam hack -->
+    <bool name="config_enableOPcamhack">false</bool>
+
 </resources>
