--- a/core/res/res/values/lotus_symbols.xml
+++ b/core/res/res/values/lotus_symbols.xml
@@ -331,4 +331,8 @@
   <java-symbol type="style" name="GlobalActionsAnimation" />
   <java-symbol type="style" name="GlobalActionsAnimationTop" />
   <java-symbol type="style" name="GlobalActionsAnimationEnter" />
+
+  <!-- Whether to enable oneplus cam hack -->
+  <java-symbol type="bool" name="config_enableOPcamhack" />
+
 </resources>
