--- a/res/values/lotus_strings.xml
+++ b/res/values/lotus_strings.xml
@@ -392,4 +392,8 @@
     <string name="rebellion_version">Rebellion release codename</string>
     <string name="rebellion_version_default">Undefined</string>
 
+    <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
+
 </resources>
