--- a/packages/SystemUI/res/layout/keyguard_bottom_area.xml
+++ b/packages/SystemUI/res/layout/keyguard_bottom_area.xml
@@ -43,6 +43,7 @@
             android:layout_gravity="center"
             android:clickable="false"
             app:lottie_fileName="keyguard_charging_indication.json"
+            app:lottie_loop="true"
             android:visibility="gone" />
 
 
