--- a/packages/SystemUI/res/drawable/clear_notif.xml
+++ b/packages/SystemUI/res/drawable/clear_notif.xml
@@ -5,7 +5,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval" >
             <solid
-                android:color="#ffffffff" />
+                android:color="@*android:color/toast_bg_color" />
             <size
                 android:width="30dp"
                 android:height="30dp" />
@@ -16,6 +16,7 @@
       <vector
 			android:width="24dp"
 			android:height="24dp"
+	                android:color="@*android:color/toast_text_color"
 			android:viewportWidth="24.0"
 			android:viewportHeight="24.0">
 			<path android:pathData="M19.000000,6.400000l-1.400000,-1.400000 -5.600000,5.600000 -5.600000,-5.600000 -1.400000,1.400000 5.600000,5.600000 -5.600000,5.600000 1.400000,1.400000 5.600000,-5.600000 5.600000,5.600000 1.400000,-1.400000 -5.600000,-5.600000z" android:fillColor="#FF000000"/>
