--- a/core/res/res/drawable/x_seekbar_track_material.xml
+++ b/core/res/res/drawable/x_seekbar_track_material.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 The RebellionOS Project
+<!-- Copyright (C) 2019 RevengeOS
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -16,23 +16,36 @@
           android:gravity="center_vertical|fill_horizontal">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/seekbar_track_progress_height_material" />
-			<size android:width="@*android:dimen/seekbar_track_material_width" />
-            <size android:height="@*android:dimen/seekbar_track_material_height" />
+            <size android:height="@dimen/seekbar_track_background_height_material" />
             <solid android:color="@color/background_grey" />
-			<corners android:radius="15dp"/>
         </shape>
     </item>
-    <item android:id="@id/progress"
+    <item android:id="@id/secondaryProgress"
           android:gravity="center_vertical|fill_horizontal">
-        <scale android:scaleWidth="90%">
+        <scale android:scaleWidth="100%">
             <selector>
                 <item android:state_enabled="false"
                       android:drawable="@color/transparent" />
                 <item>
                     <shape android:shape="rectangle">
-                        <size android:width="@*android:dimen/seekbar_track_material_width" />
-                        <size android:height="@*android:dimen/seekbar_track_material_height" />
-                        <corners android:radius="15dp"/>
+                        <corners android:radius="@dimen/seekbar_track_progress_height_material" />
+                        <size android:height="@dimen/seekbar_track_progress_height_material" />
+                        <solid android:color="@color/background_grey" />
+                    </shape>
+                </item>
+            </selector>
+        </scale>
+    </item>
+    <item android:id="@id/progress"
+          android:gravity="center_vertical|fill_horizontal">
+        <scale android:scaleWidth="100%">
+            <selector>
+                <item android:state_enabled="false"
+                      android:drawable="@color/transparent" />
+                <item>
+                    <shape android:shape="rectangle">
+                        <corners android:radius="@dimen/seekbar_track_progress_height_material" />
+                        <size android:height="@dimen/seekbar_track_progress_height_material" />
                         <gradient 
                             android:startColor="@color/gradient_start"
                             android:endColor="@color/gradient_end"
