--- a/core/res/res/values/lotus_colors.xml
+++ b/core/res/res/values/lotus_colors.xml
@@ -78,13 +78,13 @@
     <color name="custom_accent_color">@color/accent_device_default_light</color>
 
     <!-- Bootleg unneccesary gradient declaration | Just for our shishu bars -->
-    <color name="bootleg_accent_gradient_end_color">#ff7126bd</color> 
+    <color name="bootleg_accent_gradient_end_color">#00000000</color>
 	
 	<!-- Gradient -->
     <color name="gradient_start_light">@color/accent_device_default_light</color>
     <color name="gradient_start_dark">@color/accent_device_default_dark</color>
-    <color name="gradient_end_light">@color/accent_device_default_light</color>
-    <color name="gradient_end_dark">@color/accent_device_default_dark</color>
+    <color name="gradient_end_light">#ff0073e8</color>
+    <color name="gradient_end_dark">#ff0073e8</color>
 
     <color name="gradient_start">@color/gradient_start_light</color>
     <color name="gradient_end">@color/gradient_end_light</color>
