--- a/packages/SystemUI/res/drawable/qs_background_primary.xml
+++ b/packages/SystemUI/res/drawable/qs_background_primary.xml
@@ -13,7 +13,7 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android">
     <shape>
         <solid android:color="@color/qs_background_dark"/>
-        <corners android:radius="@*android:dimen/control_corner_material" />
+        <corners android:radius="?android:attr/dialogCornerRadius" />
     </shape>
 </inset>
 
